# kommandos

./: Cargo.toml  README.md
device/: Cargo.toml
device/src/: device.rs  enums.rs  errors.rs  lib.rs  types.rs  utils.rs
model/: Cargo.toml
model/src/: errors.rs  lib.rs  traits.rs  types.rs
model/src/kinds/: gguf.rs  mod.rs  safetensors.rs
