[workspace]
members = ["device", "model"]
resolver = "2"

[workspace.dependencies]
candle-core = "0.8.1"
candle-nn = "0.8.1"
candle-onnx = "0.8.1"
candle-transformers = "0.8.1"
thiserror = "2.0.7"

[workspace.package]
authors = ["Oleg Pogoraev <merizo.labs@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2021"
